layout heights landing

--- a/app/views/pages/index.html.erb
+++ b/app/views/pages/index.html.erb
@@ -33,13 +33,13 @@
     <div class="span6 well">
       <h3 class=""><i class="icon-beaker"></i> Beta</h3>
       <hr>
-      <p class="lead">Some restrictions for beta. To receive money you must have a US or Canadian bank account (UK and Euro soon).</p>
+      <p class="lead">Some beta restrictions. To receive money you must have a US or Canadian bank account (UK and Euro soon).</p>
       <%= link_to "More", info_path, class: "btn btn-large" %>
     </div>
     <div class="span6 well">
       <h3 class=""><i class="icon-music"></i> For Artists</h3>
       <hr>
-      <p class="lead">Built by independent Artists for the love of good music & late nights in distant towns & cities.</p>
+      <p class="lead">Built by independent Artists for the love of good music, late nights and adventure.</p>
       <%= link_to "More", info_path, class: "btn btn-large" %>
     </div>
   </div>
