--- a/app/views/pages/index.html.erb
+++ b/app/views/pages/index.html.erb
@@ -19,7 +19,7 @@
     <div class="span6 well">
       <h3 class=""><i class="icon-magic"></i> Features</h3>
       <hr>
-      <p class="lead">A Funding & Ticketing platform designed to be flexible and reusable. No funding time-limits, take as long as you need.</p>
+      <p class="lead">A Funding & Ticketing platform designed to be flexible and reusable. No time-limits, take as long as you need.</p>
       <%= link_to "More", info_path, class: "btn btn-large" %>
     </div>
     <div class="span6 well">
