--- a/app/views/pages/info.html.erb
+++ b/app/views/pages/info.html.erb
@@ -1,24 +1,59 @@
 <div class="container">
-  <div class="row">
-    <div class="span10 offset2" id="">
-          <h1 class="">Hi, I'm Seosamh. <span class="muted">I developed 100 Motels. </span><a href="//seocahill.com"><img src="//www.gravatar.com/avatar/fd4e9587dd4e9696fecfa8b47f5d6c77.png" class="img-circle"></a></h1>
+  <div class="row-fluid" id="founder-speaks">
+    <div class="span3 pagination-centered">
+      <a href="//seocahill.com"><img src="//www.gravatar.com/avatar/fd4e9587dd4e9696fecfa8b47f5d6c77.png" class="img-circle"></a>
+    </div>
+    <div class="span9">
+      <blockquote>
+        <h2>
+          Hi, I'm Seosamh. <span class="muted">I developed 100 Motels. </span>
+          <small><cite>100 Motels has just launched, more extensive documentation is coming - thanks for your patience!</cite></small>
+        </h2>
+      </blockquote>
     </div>
   </div>
   <div class="row-fluid">
     <div class="span3" id="side-menu">
-        <ul class="nav nav-list well" >
-          <li class="nav-header">About the Founder</li>
-
-          <li><a href="//github.com/seocahill">Github</a></li>
-          <li><a href="//seocahill.com">Blog</a></li>
-          <li class="nav-header">About 100 Motels</li>
-
+        <ul class="nav nav-list" >
+          <li class="nav-header">Documentation</li>
+          <li><a href="#getting-started">Beta Restrictions</a></li>
+          <li><a href="#getting-started">Getting Started</a></li>
           <li><a href="#how">How it Works</a></li>
         </ul>
     </div> <!-- /span3 -->
-    <div class="span9">
-      <p class="lead">Docs coming soon!</p>
+    <div class="span9" id="info-page-content">
+      <h3>
+        <i class="icon-beaker"></i> Restrictions <br>
+        <small>Most of 100 Motels is free to try out for everyone but if you intend to use it during beta for your tour, read this first... </small>
+      </h3>
+      <div class="row-fluid">
+        <div class="span12">
+          <p><a href="https://stripe.com" class="stripe-connect light-blue dark"><span>stripe payments</span></a></p>
+          <p>
+            <strong>100 Motels is a 'Stripe App'</strong> meaning there is only a full service in the countries Stripe service, currently the US and Canada.
+          </p>
+          <p> You can run events and charge credit cards in any country but in order to receive money you need a US or CAD bank account.</p>
+          <p>
+            The good news is Stripe recently started a UK beta with Europe to follow.
+          </p>
+          <h4><span class="label label-info">Event Limits</span></h4>
+          <ul class="icons">
+            <li><i class=" icon-exclamation-sign"></i> Max Capacity is 200 persons per event.</li>
+            <li><i class=" icon-exclamation-sign"></i> Ticket Price must be in the $10 to $20 dollar range.</li>
+            <li><i class=" icon-exclamation-sign"></i> While you can create as many events as you want, payments can only be active for one of your events at a time.</li>
+          </ul>
+          <p>These are temporary measures in the main, again, thanks for your patience.</p>
+          <hr class="fancy-hr">
+        </div>
+      </div>
+      <div class="row-fluid">
+        <div class="span12">
+          <h3>
+            <i class=""></i> Getting Started with 100 Motels <br>
+            <small>Most of 100 Motels is free to try out for everyone but if you intend to use it during beta for your tour, read this first... </small>
+          </h3>
+        </div>
+      </div>
     </div><!--/span-->
   </div><!--/row-->
-  <hr>
 </div> <!-- /container​ -->
