--- a/app/views/events/show.html.erb
+++ b/app/views/events/show.html.erb
@@ -55,7 +55,7 @@
 					<div class="event-funding well well-small">
 						<h3> <%= @event.edit_icon %> <%= @event.bip_artist %></h3>
 						<h3 class="hidden-desktop">
-							<small>please share!</small>
+							<small>share</small>
 							<div class="disabled-shares" data-toggle="popover" title="" data-content="Share" data-placement="bottom">
 								<i class="icon-facebook"></i>
 								<i class="icon-twitter"></i>
