fixed up the ticket checkin view

--- a/app/assets/stylesheets/tickets.css.scss
+++ b/app/assets/stylesheets/tickets.css.scss
@@ -12,3 +12,8 @@ input::-webkit-inner-spin-button {
     -webkit-appearance: none;
     margin: 0;
 }
+
+.large-badge {
+  font-size: 20px;
+  line-height: 24px;
+}
