--- a/app/views/pages/info.html.erb
+++ b/app/views/pages/info.html.erb
@@ -165,10 +165,10 @@
           <p>When you next access your Event Admin, you'll notice a new options pane has appeared- 'Charge Options' <i class="icon-asterisk"></i> - this means you have successfully activated payments for your event.</p>
           <dl>
             <dt>Unlock</dt>
-            <dd>To ensure all the event stakeholders (e.g. Artists, Organizers) are on the same page each authorized admin user has a payment lock which is on by default. Payments will only be processed if <strong>all the locks are off</strong> with <span class="label label-success"><i class="icon-unlock"></i> Payments unlocked!</span> showing on the dashboard. </dd><br>
+            <dd>To ensure all the event stakeholders (e.g. Artists, Organizers) are in agreement, each authorized admin user has a payment lock which is on by default. Payments will only be processed if <strong>all the locks are off</strong>. If this is the case you'll see <span class="label label-success"><i class="icon-unlock"></i> Payments unlocked!</span> showing on the dashboard. </dd><br>
             <dd>
               <p><small><i class="icon-camera-retro"></i><em> the user list shows a locked or unlocked icon for each admin.</em></small></p>
-              <p><img src="https://s3-us-west-2.amazonaws.com/onehundredmotels/userlocked.png" alt=""></p><br>
+              <p><img src="https://s3-us-west-2.amazonaws.com/onehundredmotels/foo%40bar.png" alt=""></p><br>
             </dd>
             <dt><em>Please note all the following operations are processed in the background, you will be notified by email upon completion.</em></dt><br>
             <dt>Charge All</dt>
@@ -183,16 +183,16 @@
             <dd>Cancels all orders, refunds all payments, invalidates all tickets. Customers are notified by email.</dd>
           </dl><br>
           <h4>Failed Payments</h4>
-          <p>Although an order gives you the right to charge a customers card sometime in the future, it doesn't guarantee funds will be available at that time.</p>
+          <p>Although an order gives you the right to charge a customer's card at some time in the future, it doesn't guarantee funds will be available at that time.</p>
           <p>Therefore in the event that a customer doesn't have sufficient funds to pay for their order, the charge will be marked as failed. When a charge fails both the customer and event organizer receive email notifications.</p>
           <p>Another reason for failure is credit card expiry. If a customer's card has expired they will be notified by email with a link to update their card. Once the card has been updated the charge will be processed and tickets issued.</p><br>
           <h4>Receiving Money</h4>
           <p> The event organizer is paid into his or her account seven days after each successful charge. This is in accordance with Stripe's rules on paying out.</p>
           <p> 100 Motels never actually holds or processes the proceeds from ticket sales. For the convenience and security of our customers the payments processing is handled entirely by Stripe. </p><br>
           <h4>Fees</h4>
-          <p>Stripes processing fee is 2.9% + 30c per transaction.</p>
+          <p>Stripe's processing fee is 2.9% + 30c per transaction.</p>
           <p>100 Motel's fee is 1% per transaction while in beta.</p>
-          <p>We gross up the order total to account for fees, meaning the event organizer receives the full value of the ticket price into his / her bank account. </p><br>
+          <br>
           <h4>Refunds</h4>
           <p>Your customer will be credited with the full price of their refunded order, i.e. the ticket price + fees.</p>
           <p>There is no extra charge to the organizer for processing refunds. The cost of refunded fees is born by Stripe and 100 Motels.</p>
@@ -204,7 +204,9 @@
           <h3>
             <i class=""></i> Tickets and Admissions <br>
             <small> </small>
-          </h3>
+          </h3><br>
+          <h4></h4>
+
         </div>
       </div>
     </div><!--/span-->
