--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -27,6 +27,7 @@
               <ul class="nav">
                 <li><%= link_to "Events", events_path %></li>
                 <li><%= link_to "Info", info_path %></li>
+                <li><%= link_to "Support", info_path %></li>
               </ul>
               <ul class="nav pull-right">
                 <% unless current_user %>
