updated home page boxes and anchors

--- a/app/views/pages/info.html.erb
+++ b/app/views/pages/info.html.erb
@@ -20,17 +20,17 @@
           <li><a href="#getting-started">Getting Started</a></li>
           <li><a href="#orders">Accepting Orders</a></li>
           <li><a href="#payments">Payments</a></li>
-          <li><a href="#payments">Tickets & Admission</a></li>
+          <li><a href="#tickets">Tickets & Admission</a></li>
           <li class="divider"></li>
           <li class="nav-header">Information </li>
-          <li><a href="#payments">Terms of Service</a></li>
-          <li><a href="#payments">Privacy Policy</a></li>
+          <li><a href="#tos">Terms of Service</a></li>
+          <li><a href="#privacy">Privacy Policy</a></li>
         </ul>
     </div> <!-- /span3 -->
     <div class="span9" id="info-page-content">
       <div class="row-fluid">
         <div class="span12">
-          <h3>
+          <h3 id="beta">
             <i class="icon-beaker"></i>Beta Restrictions <br>
             <small>Anyone can try out 100 Motels and have a look around but if you intend to use it during beta for your tour, read this first... </small>
           </h3>
@@ -54,7 +54,7 @@
       <hr class="fancy-hr">
       <div class="row-fluid">
         <div class="span12">
-          <h3>
+          <h3 id="getting-started">
             <i class=""></i> Getting Started with 100 Motels <br>
             <small>If you need help or have a question at any time, <%= link_to "don't hesitate to ask" %>. </small>
           </h3><br>
@@ -111,7 +111,7 @@
       <hr class="fancy-hr">
       <div class="row-fluid">
         <div class="span12">
-          <h3>
+          <h3 id="orders">
             <i class=""></i> Accepting Orders <br>
             <small>You can start accepting orders as soon as your event is created. </small>
           </h3>
@@ -151,7 +151,7 @@
       <hr class="fancy-hr">
       <div class="row-fluid">
         <div class="span12">
-          <h3>
+          <h3 id="payments">
             <i class=""></i> Payments <br>
             <small>To accept payments for events on 100 Motels you must register with <a href="https://stripe.com">Stripe</a>. </small>
           </h3><br>
@@ -206,7 +206,7 @@
       <hr class="fancy-hr">
       <div class="row-fluid">
         <div class="span12">
-          <h3>
+          <h3 id="tickets">
             <i class=""></i> Tickets and Admissions <br>
             <small> </small>
           </h3><br>
@@ -222,7 +222,7 @@
       <hr class="fancy-hr">
       <div class="row-fluid">
         <div class="span12">
-          <h3>
+          <h3 id="tos">
             <i class=""></i> Terms of Service <br>
             <small> </small>
           </h3><br>
@@ -236,7 +236,7 @@
           <h5>1. Acceptance of the Terms of Service</h5>
           <p>Welcome to <strong>100 Motels</strong> (a.k.a. "<strong>we</strong>" or "<strong>us</strong>" or the "<strong>Company</strong>"). We are excited to have you as user and member of the community. The following terms and conditions (collectively, these "<strong>Terms of Service</strong>") apply to your use of www.100 Motels.com, including any content, functionality and services offered on or via 100 Motels.com (the "<strong>Website</strong>"). The Terms of Service also include our <strong>Privacy Policy</strong></p>
           <p>We want to keep our relationship with you as lean and informal as possible, but please read the Terms of Service carefully before you start using 100 Motels, because <strong>by using the Website you accept and agree to be bound and abide by these Terms of Service</strong>.</p>
-          <p>Should you disagree with some of the provisions herein, you can either leave the Website, or contact us at by clicking the 'support' link on the site's navigation bar. <strong>>, and we'll be happy to hear your comments and suggestions.</p>
+          <p>Should you disagree with some of the provisions herein, you can either leave the Website, or contact us at by clicking the 'support' link on the site's navigation bar. <strong>>, and we'll be happy to hear your comments and suggestions</strong>.</p>
           <h5>2. Changes to the Terms of Service and the Website</h5>
           <p>100 Motels is a work in progress, meaning that a lot will change in the near future. We reserve the right to update the Website and these Terms of Service from time to time, at our discretion. We will make sure to announce any major change in a prominent way. <strong>Your continued use of the Website following the publishing of updated Terms of Service means that you accept and agree to the changes.</strong></p>
           <h5>3. Accessing the Website,Security and Privacy</h5>
@@ -294,7 +294,7 @@
       <hr class="fancy-hr">
       <div class="row-fluid">
         <div class="span12">
-          <h3>
+          <h3 id="privacy">
             <i class=""></i> Privacy Policy <br>
             <small> </small>
           </h3><br>
