--- a/app/views/pages/index.html.erb
+++ b/app/views/pages/index.html.erb
@@ -20,27 +20,27 @@
       <h3 class=""><i class="icon-magic"></i> Features</h3>
       <hr>
       <p class="lead">A Funding & Ticketing platform designed to be flexible and reusable. No time-limits, take as long as you need.</p>
-      <%= link_to "More", info_path, class: "btn btn-large" %>
+      <%= link_to "More", info_path(anchor: "getting-started"), class: "btn btn-large" %>
     </div>
     <div class="span6 well">
       <h3 class=""><i class="icon-money"></i> Fees</h3>
       <hr>
-      <p class="lead">Total 3.9% + 30c per transaction added-on (you keep the full ticket price), full refunds including fees.</p>
-      <%= link_to "More", info_path, class: "btn btn-large" %>
+      <p class="lead">Total is equal to 3.9% + 30c per transaction added-on (you keep the full ticket price), full refunds including fees.</p>
+      <%= link_to "More", info_path(anchor: "payments"), class: "btn btn-large" %>
     </div>
   </div>
   <div class="row-fluid">
     <div class="span6 well">
       <h3 class=""><i class="icon-beaker"></i> Beta</h3>
       <hr>
-      <p class="lead">Some beta restrictions. To receive money you must have a US or Canadian bank account (UK and Euro soon).</p>
-      <%= link_to "More", info_path, class: "btn btn-large" %>
+      <p class="lead">Capacity and pricing limits as well as geographic restrictions apply during beta.</p>
+      <%= link_to "More", info_path(anchor: "beta"), class: "btn btn-large" %>
     </div>
     <div class="span6 well">
       <h3 class=""><i class="icon-music"></i> For Artists</h3>
       <hr>
       <p class="lead">Built by independent Artists for the love of good music, late nights and adventure.</p>
-      <%= link_to "More", info_path, class: "btn btn-large" %>
+      <%= link_to "More", info_path(anchor: ""), class: "btn btn-large" %>
     </div>
   </div>
   <div class="row-fluid">
